[gd_scene load_steps=18 format=3 uid="uid://cie3fggl5g14u"]

[ext_resource type="Script" path="res://Script/main_menu.gd" id="1_8y7km"]
[ext_resource type="Texture2D" uid="uid://bqjy6uy37xfvo" path="res://Assets/UI/continue.png" id="1_i1rhe"]
[ext_resource type="Texture2D" uid="uid://bg6pwjnipmjun" path="res://Assets/UI/play.png" id="2_r40go"]
[ext_resource type="Texture2D" uid="uid://dmranw3x88i3c" path="res://Assets/UI/options.png" id="3_2xymu"]
[ext_resource type="Texture2D" uid="uid://cc8xg8krjjtpb" path="res://Assets/UI/tile046.png" id="4_806ix"]
[ext_resource type="Texture2D" uid="uid://dtdx7fci5ntla" path="res://Assets/UI/pcontinue.png" id="5_7ojoi"]
[ext_resource type="Texture2D" uid="uid://bio00qkduj3y" path="res://Assets/UI/pplay.png" id="5_uud4l"]
[ext_resource type="Texture2D" uid="uid://dpideyulcmg45" path="res://Assets/UI/poptions.png" id="7_bxmda"]
[ext_resource type="Texture2D" uid="uid://c5e73hrhlbopy" path="res://Assets/UI/tile047.png" id="8_mheyw"]
[ext_resource type="VideoStream" path="res://Assets/heist.ogv" id="9_1dvh2"]
[ext_resource type="Texture2D" path="res://Assets/nmuted.png" id="10_3awx1"]
[ext_resource type="Texture2D" uid="uid://chows5gnk824w" path="res://Assets/UI/stat.png" id="12_jfxv3"]
[ext_resource type="Texture2D" uid="uid://dinfy3yv2shvu" path="res://Assets/UI/ezgif-7-0fe6a2cf0d-png-32x32-sprite-png/tile001.png" id="13_46i3i"]
[ext_resource type="Texture2D" uid="uid://dvugk6ik65dc8" path="res://Assets/UI/ezgif-7-0fe6a2cf0d-png-32x32-sprite-png/tile000.png" id="14_37y0o"]
[ext_resource type="Texture2D" uid="uid://f8s3dvjvdhkp" path="res://Assets/UI/stat (2).png" id="15_8kas2"]
[ext_resource type="Texture2D" uid="uid://c1ny5pg4h5b13" path="res://Assets/UI/sound.png" id="16_d3773"]
[ext_resource type="PackedScene" path="res://Scenes/label.tscn" id="17_kbv0q"]

[node name="main_control" type="Node"]
script = ExtResource("1_8y7km")

[node name="idle" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="idle"]
layout_mode = 2
offset_right = 1393.0
offset_bottom = 781.0
stream = ExtResource("9_1dvh2")
autoplay = true
expand = true
loop = true

[node name="ColorRect3" type="ColorRect" parent="idle"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.270588)

[node name="ColorRect2" type="ColorRect" parent="idle"]
layout_mode = 2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -57.0
offset_right = 13.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.203922, 0.203922, 0.203922, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="idle"]
layout_direction = 2
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -349.0
offset_top = -269.0
offset_right = -301.0
offset_bottom = -233.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(7, 7)
alignment = 1

[node name="TextureButton2" type="TextureButton" parent="idle/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_i1rhe")
texture_pressed = ExtResource("5_7ojoi")

[node name="TextureButton" type="TextureButton" parent="idle/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_r40go")
texture_pressed = ExtResource("5_uud4l")

[node name="VBoxContainer3" type="VBoxContainer" parent="idle"]
layout_direction = 2
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -271.0
offset_right = 67.0
offset_bottom = -235.0
grow_vertical = 0
scale = Vector2(7, 7)
alignment = 1

[node name="TextureButton4" type="TextureButton" parent="idle/VBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("3_2xymu")
texture_pressed = ExtResource("7_bxmda")

[node name="TextureButton3" type="TextureButton" parent="idle/VBoxContainer3"]
layout_mode = 2
texture_normal = ExtResource("4_806ix")
texture_pressed = ExtResource("8_mheyw")

[node name="label placeholder" type="Control" parent="idle"]
anchors_preset = 0
offset_left = 1020.0
offset_top = 37.0
offset_right = 1020.0
offset_bottom = 37.0

[node name="lablel placeholder2" type="Control" parent="idle"]
anchors_preset = 0
offset_left = 1020.0
offset_top = 37.0
offset_right = 1020.0
offset_bottom = 37.0

[node name="Label" type="Label" parent="idle"]
layout_mode = 2
offset_left = 323.0
offset_top = 307.0
offset_right = 1062.0
offset_bottom = 453.0
theme_override_colors/font_color = Color(0.376471, 0.376471, 0.376471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 106
text = "Museum Heist"

[node name="options" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1377.0
offset_bottom = 767.0

[node name="ColorRect" type="ColorRect" parent="options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.270588)

[node name="Button" type="Button" parent="options/ColorRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="optionchoice" type="TextureRect" parent="options"]
layout_mode = 0
offset_left = 404.0
offset_top = 135.0
offset_right = 1028.0
offset_bottom = 662.0
texture = ExtResource("14_37y0o")

[node name="VBoxContainer" type="VBoxContainer" parent="options/optionchoice"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -146.5
offset_right = -151.0
offset_bottom = -110.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8, 8)

[node name="stats" type="TextureButton" parent="options/optionchoice/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("15_8kas2")

[node name="sound" type="TextureButton" parent="options/optionchoice/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("16_d3773")

[node name="mute" type="TextureButton" parent="options"]
layout_mode = 2
offset_left = 460.0
offset_top = 145.0
offset_right = 492.0
offset_bottom = 177.0
scale = Vector2(15, 15)
texture_normal = ExtResource("10_3awx1")

[node name="stat" type="TextureButton" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -571.5
offset_top = -282.5
offset_right = -539.5
offset_bottom = -250.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(35, 20)
texture_normal = ExtResource("13_46i3i")

[node name="TextureRect" type="TextureRect" parent="options/stat"]
layout_mode = 0
offset_left = 9.71429
offset_top = -3.65
offset_right = 41.7143
offset_bottom = 21.35
scale = Vector2(0.4, 0.3)
texture = ExtResource("12_jfxv3")

[node name="ScrollContainer" type="ScrollContainer" parent="options/stat"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 364.0
offset_bottom = 407.0
scale = Vector2(0.06, 0.06)

[node name="VFlowContainer" type="HFlowContainer" parent="options/stat/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer2" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer3" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer4" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer5" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer6" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer7" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer8" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer9" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer10" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[node name="HBoxContainer11" parent="options/stat/ScrollContainer/VFlowContainer" instance=ExtResource("17_kbv0q")]
layout_mode = 2

[connection signal="button_up" from="idle/VBoxContainer/TextureButton2" to="." method="_on_texture_button_2_button_up"]
[connection signal="button_up" from="idle/VBoxContainer/TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="button_down" from="idle/VBoxContainer3/TextureButton4" to="." method="_on_texture_button_4_button_down"]
[connection signal="button_up" from="idle/VBoxContainer3/TextureButton3" to="." method="_on_texture_button_3_button_up"]
[connection signal="button_up" from="options/ColorRect/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="options/optionchoice/VBoxContainer/stats" to="." method="_on_stats_button_up"]
[connection signal="button_up" from="options/optionchoice/VBoxContainer/sound" to="." method="_on_sound_button_up"]
[connection signal="button_up" from="options/mute" to="." method="_on_mute_button_up"]
